plugins/kotlin/idea/tests/testData/gradle/multiplatform/core/features/publishedLibrarySources/expectActualInLibrarySources/lib/src/jvmMain/kotlin/Lib.jvm.kt
package com.example.lib

actual object <!LINE_MARKER("descr='Has expects in commonMain module'")!>Lib<!> {

    actual fun <!LINE_MARKER("descr='Has expects in commonMain module'")!>foo<!>(): Int = 0
}

actual fun <!LINE_MARKER("descr='Has expects in commonMain module'")!>topLevelFun<!>() {}
